--- a/packages/timeago_flutter_example/pubspec.yaml
+++ b/packages/timeago_flutter_example/pubspec.yaml
@@ -4,7 +4,7 @@ description: A Flutter example for timeago_flutter package on the top of timeago
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0"
 
 dependencies:
   timeago_flutter: 
